--- a/index.html
+++ b/index.html
@@ -38,3 +38,17 @@
                     <li class="lista-menu__item">
                         <a href="#" class="lista-menu__link">Design & UX</a>
                     </li>
+                    </ul>
+                    <img src="img/Logo.svg" alt="Logo da Alurabooks" class="container__imagem">
+                    <h1 class="container__titulo">
+                        <b class="container__titulo--negrito">Alura</b>Books</h1>
+
+                    <ul class="opções">
+                        <input type="checkbox" id="opções-menu" class="opções__botão">
+                        <label for="opções-menu" class="opções__rotulo">
+                        <li class="opções__item">Categorias</li>
+                    </label>
+                    </ul>
+                    </div>
+                </body>
+                </html>
