--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               Construindo uma aplicação integrada com a plataforma do Google.
             </p>
           </div>
-          <img src="img/Angular.svg" class="descrição__imagem" />
+          <img src="img/Angular.svg" class="descrição__imagem" />gle for Education
         </div>
         <div class="card__botões">
           <ul class="botões">
@@ -202,4 +202,32 @@
         </div>
       </div>
     </div>
+    </section>
+    
+    <section class="tópicos">
+      <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+      <ul class="tópicos__lista">
+        <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Marketing Digital</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Agile</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Startups</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">HTML & CSS</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Python</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">OO</a>
+        </li>
+        <li class="tópicos__item">
+          <a href="#" class="tópicos__link">Java</a>
+        </li>
+      </ul>
     </section>
