--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
       </div>
     </div>
     </section>
-    
+
     <section class="tópicos">
       <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
       <ul class="tópicos__lista">
@@ -231,3 +231,52 @@
         </li>
       </ul>
     </section>
+    
+    <section class="contato">
+      <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+      <p class="contato__texto">
+        Atualizações de e-books, novos livros, promoções e outros.
+      </p>
+      <input type="email" placeholder="Cadastre seu e-mail" class="contato__email" />
+    </section>
+  
+    <hr />
+  
+    <footer class="rodapé">
+      <h2 class="rodapé__titulo">Grupo Alura</h2>
+    </footer>
+  
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+      const swiper = new Swiper(".swiper", {
+        spaceBetween: 10,
+        slidesPerView: 3,
+        pagination: {
+          el: ".swiper-pagination",
+          type: "bullets",
+        },
+      });
+    </script>
+
+    <footer class="rodapé">
+      <h2 class="rodapé__título">Grupo Alura</h2>
+      <ul class="lista-rodapé">
+        <li class="lista-rodapé__título">Educação</li>
+        <li class="lista-rodapé__item">
+          <img src="img/Caelum.svg" alt="Logo da Caelum">
+          <a href="e" class="lista-rodapé__link">Caelum</a>
+        </li>
+        <li class="lista-rodapé__item">
+          <img src="img/CasaDoCodigo.svg" alt="Logo da Casa do Código">
+          <a href="e" class="lista-rodapé__link">Casa do Código</a>
+        </li>
+      </ul>
+
+      <ul class="lista-rodapé">
+        <li class=""></li>
+        <li class="">
+        <img src="" alt="">
+        <a href="" class=""></a>
+      </li>
+      </ul>
+    </footer>
