--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>AluraBooks</title>
   <link rel="stylesheet" href="reset.css">
   <link rel="preconnect" href="https://fonts.googleapis.com"&gt;>
-  <link rel="preconnect" href="https://fonts.gstatic.com&quot"; crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap&quot"; rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:wght@400;700&display=swap&quot"; rel="stylesheet">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css&quot"; />
+  <link rel="preconnect" href="https://fonts.gstatic.com"; crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap"; rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:wght@400;700&display=swap"; rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"; />
   <link rel="stylesheet" href="styles.css">
 </head>
 
