--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
               Construindo uma aplicação integrada com a plataforma do Google.
             </p>
           </div>
-          <img src="img/Angular.svg" class="descrição__imagem" />gle for Education
+          <img src="img/Angular.svg" class="descrição__imagem" />
         </div>
         <div class="card__botões">
           <ul class="botões">
@@ -147,16 +147,19 @@
           <a href="#" class="botões__ancora">Saiba mais</a>
         </div>
       </div>
-  
-    </section>
-  
-    <section class=”carrossel”>
-      <h2 class="carrossel__titulo">Mais vendidos</h2>
+    </div>
+
+  </section>
+
+  <section class=”carrossel”>
+    <h2 class="carrossel__titulo">Mais vendidos</h2>
+
+    <div class="carrossel__container">
       <div class="swiper">
         <!-- Additional required wrapper -->
         <!-- If we need pagination -->
         <div class="swiper-pagination"></div>
-  
+
         <div class="swiper-wrapper">
           <!-- Slides -->
           <div class="swiper-slide"><img src="img/ApacheKafka.svg"
@@ -169,12 +172,12 @@
           <div class="swiper-slide"><img src="img/Portugol.svg" alt="Livro sobre portugol"></div>
           <div class="swiper-slide"><img src="img/Acessibilidade.svg" alt="livro sobre acessibilidade"></div>
         </div>
-  
+
         <!-- If we need navigation buttons -->
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
       </div>
-  
+
       <div class="card">
         <!-- 1º linha -->
         <div class="card__descrição">
@@ -183,9 +186,11 @@
             <img src="img/Estrelinhas.svg" alt="Avaliação 5 estrelas">
             <h3 class="descrição__titulo">Autora do Mês</h3>
             <h2 class="descrição__titulo-livro">Juliana Agarikov</h2>
-            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em Front-End.
+            <p class="descrição__texto">Analista de sistemas e escritora, Juliana é especialista em
+              Front-End.
             </p>
           </div>
+
           <!-- 2º coluna -->
           <img src="img/Escritora.svg" class="descrição__imagem">
         </div>
@@ -202,81 +207,123 @@
         </div>
       </div>
     </div>
-    </section>
+  </section>
 
-    <section class="tópicos">
-      <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
-      <ul class="tópicos__lista">
-        <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Marketing Digital</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Agile</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Startups</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">HTML & CSS</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Python</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">OO</a>
-        </li>
-        <li class="tópicos__item">
-          <a href="#" class="tópicos__link">Java</a>
-        </li>
-      </ul>
-    </section>
-    
-    <section class="contato">
+  <section class="tópicos">
+    <h2 class="tópicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+    <ul class="tópicos__lista">
+      <li class="tópicos__item"><a href="#" class="tópicos__link">Android</a></li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Marketing Digital</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Agile</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Startups</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">HTML & CSS</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Python</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">OO</a>
+      </li>
+      <li class="tópicos__item">
+        <a href="#" class="tópicos__link">Java</a>
+      </li>
+    </ul>
+  </section>
+
+  <section class="contato">
+    <div class="contato__descrição">
       <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
       <p class="contato__texto">
         Atualizações de e-books, novos livros, promoções e outros.
       </p>
-      <input type="email" placeholder="Cadastre seu e-mail" class="contato__email" />
-    </section>
-  
-    <hr />
-  
-    <footer class="rodapé">
-      <h2 class="rodapé__titulo">Grupo Alura</h2>
-    </footer>
-  
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-      const swiper = new Swiper(".swiper", {
-        spaceBetween: 10,
-        slidesPerView: 3,
-        pagination: {
-          el: ".swiper-pagination",
-          type: "bullets",
-        },
-      });
-    </script>
+    </div>
+    <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+  </section>
 
-    <footer class="rodapé">
-      <h2 class="rodapé__título">Grupo Alura</h2>
-      <ul class="lista-rodapé">
-        <li class="lista-rodapé__título">Educação</li>
-        <li class="lista-rodapé__item">
-          <img src="img/Caelum.svg" alt="Logo da Caelum">
-          <a href="e" class="lista-rodapé__link">Caelum</a>
-        </li>
-        <li class="lista-rodapé__item">
-          <img src="img/CasaDoCodigo.svg" alt="Logo da Casa do Código">
-          <a href="e" class="lista-rodapé__link">Casa do Código</a>
-        </li>
-      </ul>
+  <hr />
 
-      <ul class="lista-rodapé">
-        <li class=""></li>
-        <li class="">
-        <img src="" alt="">
-        <a href="" class=""></a>
+  <footer class="rodapé">
+    <h2 class="rodapé__titulo">Grupo Alura</h2>
+    <ul class="lista-rodapé">
+      <li class="lista-rodapé__titulo">Educação</li>
+      <li class="lista-rodapé__item">
+        <img src="img/Caelum.svg" alt="Logo da Caelum" />
+        <a href="#" class="lista-rodapé__link">Caelum</a>
       </li>
-      </ul>
-    </footer>
+      <li class="lista-rodapé__item">
+        <img src="img/CasaDoCodigo.svg" alt="Logo da Casa do Código" />
+        <a href="#" class="lista-rodapé__link">Casa do Código</a>
+      </li>
+    </ul>
+
+    <ul class="lista-rodapé">
+      <li class="lista-rodapé__titulo">Educação online</li>
+      <li class="lista-rodapé__item">
+        <img src="img/Alura.svg" alt="Logo da Alura" />
+        <a href="#" class="lista-rodapé__link">Alura</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/AluraEmpresas.svg" alt="Logo da AluraParaEmpresas" />
+        <a href="#" class="lista-rodapé__link">Alura para Empresas</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/AluraLATAM.svg" alt="Logo da Alura Latam" />
+        <a href="#" class="lista-rodapé__link">Alura LATAM</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/AluraStart.svg" alt="Logo da Alura START" />
+        <a href="#" class="lista-rodapé__link">Alura Start</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/MusicDot.svg" alt="Logo da Music Dot" />
+        <a href="#" class="lista-rodapé__link">Music Dot</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/AluraLingua.svg" alt="Logo da Alura Lingua" />
+        <a href="#" class="lista-rodapé__link">Alura Língua</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/PM3.svg" alt="Logo da PM3" />
+        <a href="#" class="lista-rodapé__link">PM3</a>
+      </li>
+    </ul>
+
+    <ul class="lista-rodapé">
+      <li class="lista-rodapé__titulo">Comunidade</li>
+      <li class="lista-rodapé__item">
+        <img src="img/HipstersTech.svg" alt="Logo do Hipsters ponto Tech" />
+        <a href="#" class="lista-rodapé__link">Hipsters ponto Tech</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/ScubaDev.svg" alt="Logo do Scuba Dev" />
+        <a href="#" class="lista-rodapé__link">Scuba Dev</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/LayersTech.svg" alt="Logo do Layers ponto Tech" />
+        <a href="#" class="lista-rodapé__link">Layers ponto Tech</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/LikeABoss.svg" alt="Logo do Like a Boss" />
+        <a href="#" class="lista-rodapé__link">Like a Boss</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/CarreiraSemFronteira.svg" alt="Logo do Carreira sem fronteiras" />
+        <a href="#" class="lista-rodapé__link">Carreira sem fronteiras</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/HipstersJobs.svg" alt="Logo do Hipsters ponto jobs" />
+        <a href="#" class="lista-rodapé__link">Hipsters ponto jobs</a>
+      </li>
+      <li class="lista-rodapé__item">
+        <img src="img/GUJ.svg" alt="Logo do GUJ" />
+        <a href="#" class="lista-rodapé__link">GUJ</a>
+      </li>
+    </ul>
+  </footer>
