--- a/index.html
+++ b/index.html
@@ -327,3 +327,6 @@
       </li>
     </ul>
   </footer>
+<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+</body>
+</html>
