--- a/index.html
+++ b/index.html
@@ -328,5 +328,15 @@
     </ul>
   </footer>
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+<script>
+  const swiper = new swiper(".swiper", {
+    spaceBetween 10,
+    slidePerView 3,
+    pagination {
+      el: '.swiper-pagination',
+      type:'bullet',
+    },
+  });
+</script>
 </body>
 </html>
