--- a/index.html
+++ b/index.html
@@ -327,16 +327,17 @@
       </li>
     </ul>
   </footer>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-<script>
-  const swiper = new swiper(".swiper", {
-    spaceBetween 10,
-    slidePerView 3,
-    pagination {
-      el: '.swiper-pagination',
-      type:'bullet',
-    },
-  });
-</script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <script>
+    const swiper = new swiper(".swiper",{
+      spaceBetween: 10,
+      slidesPerView: 3,
+      pagination: {
+        el: '.swiper-pagination',
+        type: 'bullets',
+      },
+    });
+  </script>
+
 </body>
 </html>
